@@ -27,9 +27,10 @@
 from enum import Enum
 from os.path import abspath
 from pyworkflow import BETA
+from pyworkflow.gui import askYesNo
 from pyworkflow.object import String, Integer
 from pyworkflow.protocol import IntParam
-from pyworkflow.utils import removeBaseExt
+from pyworkflow.utils import removeBaseExt, Message
 from tomo.constants import BOTTOM_LEFT_CORNER
 from tomo.protocols import ProtTomoPicking
 from tomo.objects import Coordinate3D, SetOfCoordinates3D
@@ -78,14 +79,17 @@ class DeepFinderAnnotations(ProtTomoPicking):
             ParticleAnnotatorDialog(None, self._getExtraPath(), provider=self._provider, prot=self)
 
         # All the objetcs have been annotated --> create output objects
-        self._getAnnotationStatus()
-        if self._objectsToGo.get() == 0:
-            print("\n==> Generating the outputs")
-            self._genOutput3DCoords()
+        # Open dialog to request confirmation to create output
+        import tkinter as tk
+        frame = tk.Frame()
+        if askYesNo(Message.TITLE_SAVE_OUTPUT, Message.LABEL_SAVE_OUTPUT, frame):
+            doneTomos = [tomo for tomo in self._tomoList if self._provider.getObjectInfo(tomo)['values'][0] > 0]
+            self._genOutput3DCoords(doneTomos)
 
+        self._getAnnotationStatus()
         self._store()
 
-    def _genOutput3DCoords(self):
+    def _genOutput3DCoords(self, annotatedTomos):
         setTomograms = self.inputTomograms.get()
         coord3DSet = self._createSetOfCoordinates3D(setTomograms)
         coord3DSet.setSamplingRate(setTomograms.getSamplingRate())
@@ -93,13 +97,14 @@ class DeepFinderAnnotations(ProtTomoPicking):
 
         coordCounter = 0
         annotationSummary = ''
-        for tomo in setTomograms.iterItems():
+        for tomo in annotatedTomos:
+            tomoName = tomo.getFileName()
             # Read objl:
-            fname_objl = 'objl_annot_' + removeBaseExt(tomo.getFileName()) + '.xml'
+            fname_objl = 'objl_annot_' + removeBaseExt(tomoName) + '.xml'
             objl_tomo = cv.objl_read(abspath(self._getExtraPath(fname_objl)))
 
             # Generate string for protocol summary:
-            msg = 'Tomogram ' + tomo.getFileName() + ': a total of ' + \
+            msg = 'Tomogram ' + tomoName + ': a total of ' + \
                   str(len(objl_tomo)) + ' objects has been annotated.'
             annotationSummary += msg
             lbl_list = cv.objl_get_labels(objl_tomo)
@@ -153,5 +158,5 @@ class DeepFinderAnnotations(ProtTomoPicking):
 
     def _getAnnotationStatus(self):
         """Check if all the tomo masks have been annotated and store current status in a text file"""
-        doneTomes = [self._provider.getObjectInfo(tomo)['tags'] == 'done' for tomo in self._tomoList]
+        doneTomes = [self._provider.getObjectInfo(tomo)['values'][0] > 0 for tomo in self._tomoList]
         self._objectsToGo.set(len(self._tomoList) - sum(doneTomes))
