@@ -4,5 +4,8 @@ v3.1.0:
     - Calling the DeepFinder viewer now offers an auxiliar window to previously select the tomogram to be displayed.
     - The background class in now considered internally by Scipion when importing a model.
     - Critical warning about the FOV value added to the target generation protocol.
+    - Annotation protocol now allows to generate the output even though not all the tomograms have been annotated.
+      IMPORTANT: until some requested changes in the source code are carried out, the tomograms can only be annotated
+      once. Otherwise, its coordinates are lost.
 
 
